# libsoldout

./: configure.ac
src/: Makefile.am
